--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 Here's a glimpse of the workshops I offer and their potential benefits:
 
               </p>
-              <a href="#" class="about-btn"><span>Get In Touch</span> <i class="bx bx-chevron-right"></i></a>
+              
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch">
@@ -451,25 +451,38 @@
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
-                  <h4>Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <h4>1 - Building Resilience:</h4>
+                  <p>Participants learn strategies to bounce back from challenges and setbacks, fostering resilience in personal and professional spheres. Workshops help navigate transitions and adapt to change effectively, fostering resilience and growth amidst organisational or personal changes.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
-                  <h4>Ullamco laboris nisi</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <h4>2 - Personal Growth: </h4>
+                  <p>Focuses on improving individual productivity, time management, goal setting, and prioritisation skills to enhance personal effectiveness and achievement. Participants learn techniques to overcome procrastination, boost motivation, and achieve desired outcomes in personal and professional endeavours.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
-                  <h4>Labore consequatur</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                  <h4>3 - Communication Skills: </h4>
+                  <p>Develop skills and strategies to manage and resolve conflicts effectively in personal and professional relationships, fostering better communication and collaboration.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
-                  <h4>Beatae veritatis</h4>
-                  <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                  <h4>4 - Creating Boundaries: </h4>
+                  <p>Explores the importance of setting healthy boundaries in personal and professional relationships, promoting self-care and well-being.</p>
                 </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+                  <i class="bx bx-shield"></i>
+                  <h4>5 - Work-Life Integration: </h4>
+                  <p>Explore strategies for balancing personal and professional responsibilities, promoting well-being and satisfaction in both domains. Workshops raise awareness and provide tools for maintaining and promoting positive mental well-being.</p>
+                </div>
+                
               </div>
+              <div class="content">
+                <p>
+                  These workshops are designed to empower individuals to thrive personally and professionally, enhancing their overall well-being and contributing to a more harmonious and productive work environment.  
+                </p>
+                <a href="#" class="about-btn"><span>Get In Touch</span> <i class="bx bx-chevron-right"></i></a>
+              </div>
+
             </div><!-- End .content-->
           </div>
         </div>
