--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#team">About Me</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto " href="#about">Workshops</a></li>
+          <li><a class="nav-link scrollto" href="#testimonials">Testimonials</a></li>
           <!--<li><a href="blog.html">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -75,7 +75,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#about" class="get-started-btn scrollto">Get in Touch</a>
+      <a href="#contact" class="get-started-btn scrollto">Get in Touch</a>
     </div>
   </header><!-- End Header -->
 
@@ -88,7 +88,7 @@
           <h2>Embrace your Uniqueness</h2>
           <h2 style="padding-left: 50px;">Embrace Challenges</h2>
           <h1 style="padding-left: 100px;">Embrace Life</h1>
-          <a href="#about" class="btn-get-started scrollto">Get in Touch</a>
+          <a href="#contact" class="btn-get-started scrollto">Get in Touch</a>
         </div>
       </div>
     </div>
@@ -427,7 +427,9 @@
               <p>Our ultimate goal is to facilitate your transformation and facilitate your journey towards lasting growth and fulfilment. Together, we'll embark on a transformative journey that will empower you to become the best version of yourself.</p>
             </div>
           </div>
-          
+          <div class="content">
+          <a href="#contact" class="about-btn"><span>Get In Touch</span> <i class="bx bx-chevron-right"></i></a>
+          </div>
         </div>
 
       </div>
@@ -483,7 +485,7 @@
                 <p>
                   These workshops are designed to empower individuals to thrive personally and professionally, enhancing their overall well-being and contributing to a more harmonious and productive work environment.  
                 </p>
-                <a href="#" class="about-btn"><span>Get In Touch</span> <i class="bx bx-chevron-right"></i></a>
+                <a href="#contact" class="about-btn"><span>Get In Touch</span> <i class="bx bx-chevron-right"></i></a>
               </div>
 
             </div><!-- End .content-->
