--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <section id="coaching" class="testimonials">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
+          <img src="assets/img/Logo.png" class="img-fluid" id="logo" alt="">
           <h2>What is Coaching?</h2>
           <p>At Embrace Life Coaching, I am dedicated to empowering individuals like you to unlock their full potential and achieve their wildest dreams.<br><br>
             Coaching is a collaborative process that aims to unlock an individual's potential and maximise their performance in various aspects of life, whether personal or professional. Unlike mentoring or counselling, which often involve providing advice or solutions, coaching focuses on empowering individuals to find their own answers, make informed decisions, and take action towards their goals.<br><br>
