--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
 
+    <video class="video-container" muted loop autoplay>
+      <source src="assets/img/ocean_new.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <div class="row">
         <div class="col-xl-6">
