--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>Lisa Downey</h3>
                   <h4>Marketing Executive | KORE Insulation</h4>
                   <p>
@@ -683,7 +683,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>Lisa</h3>
                   <h4>Re Emerge</h4>
                   <p>
@@ -698,7 +698,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>Claire</h3>
                   <h4>Personal Coaching</h4>
                   <p>
@@ -713,7 +713,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-user-male-150.png" class="testimonial-img" alt="">
                   <h3>Mike Finnegan</h3>
                   <h4>Health and Fitness Business Owner</h4>
                   <p>
@@ -728,7 +728,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>Joanne</h3>
                   <h4>Personal Coaching</h4>
                   <p>
@@ -743,7 +743,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>Justine</h3>
                   <h4>Personal Coaching</h4>
                   <p>
@@ -758,7 +758,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>Emma</h3>
                   <h4>Career Coaching</h4>
                   <p>
@@ -773,7 +773,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>June</h3>
                   <h4>Personal Coaching</h4>
                   <p>
@@ -788,7 +788,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>Susan</h3>
                   <h4>Business Owner</h4>
                   <p>
@@ -803,7 +803,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-user-male-150.png" class="testimonial-img" alt="">
                   <h3>Paul</h3>
                   <h4>Personal Coaching</h4>
                   <p>
@@ -818,7 +818,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>Jennifer</h3>
                   <h4>Workshop Participant</h4>
                   <p>
@@ -833,7 +833,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>Sarah</h3>
                   <h4>Workshop Participant</h4>
                   <p>
@@ -848,7 +848,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/icons8-female-user-150.png" class="testimonial-img" alt="">
                   <h3>Anne</h3>
                   <h4>Scoil Maelruain Junior, Tallaght</h4>
                   <p>
@@ -1098,24 +1098,13 @@
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Page Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#team">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">Workshops</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#testimonials">Testimonials</a></li>
             </ul>
           </div>
 
@@ -1142,7 +1131,7 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/presento-bootstrap-corporate-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Designed by <a href="https://bootstrapmade.com/"><span style="color: darkslategrey;">BootstrapMade</span></a>. Tailored Designed by <a href="https://cranmerwebdesign.ie/"><span style="color: whitesmoke;">Cranmer Web Design</span></a>
         </div>
       </div>
       <div class="social-links text-center text-md-end pt-3 pt-md-0">
