--- a/index.html
+++ b/index.html
@@ -872,13 +872,19 @@
           <div class="swiper-pagination"></div>
         </div>
 
-        
+    <div class="row" id="newsletter">
+      
+      <div class="col-lg-4 col-md-4"></div>
+
+      <div class="col-lg-4 col-md-4">
+        <h4>Newsletter</h4>
+        <p>Click the button below to sign-up to my Newsletter</p>  
     <script src ="https://form.jotform.com/static/feedback2.js" type="text/javascript"></script>
     <script type="text/javascript">
         var JFL_241961819712361 = new JotformFeedback({
           formId: '241961819712361',
           base: 'https://form.jotform.com/',
-          windowTitle: 'Opt-In Form-Get Free Email Updates!',
+          windowTitle: 'Subscribe To My Newsletter!',
           backgroundColor: '#FFA500',
           fontColor: '#FFFFFF',
           type: 'false',
@@ -902,14 +908,17 @@
       text-shadow: none;
       user-select: none;
       transition: all,.1s,ease-in;
-      background-color: #FFA500;
-      border: 1px solid #FFA500;
+      background-color: #BF0073;
+      border: 1px solid #BF0073;
       color: #FFFFFF;
+      align-content: center;
       ">
-        Opt-In Form-Get Free Email Updates!
+        Newsletter Sign-Up
       </a>
+    </div>
 
-      <script type="text/javascript" src="https://form.jotform.com/jsform/241961819712361"></script>
+    <div class="col-lg-4 col-md-4"></div>
+    </div>
 
       </div>
     </section><!-- End Testimonials Section -->
@@ -1095,7 +1104,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/xlebpqnj" method="post" role="form" class="contact-form">
               <div class="row">
                 <div class="col form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
