Forms Updated and Tested

--- a/index.html
+++ b/index.html
@@ -879,42 +879,42 @@
       <div class="col-lg-4 col-md-4">
         <h4>Newsletter</h4>
         <p>Click the button below to sign-up to my Newsletter</p>  
-    <script src ="https://form.jotform.com/static/feedback2.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        var JFL_241961819712361 = new JotformFeedback({
-          formId: '241961819712361',
-          base: 'https://form.jotform.com/',
-          windowTitle: 'Subscribe To My Newsletter!',
-          backgroundColor: '#FFA500',
-          fontColor: '#FFFFFF',
-          type: 'false',
-          height: 500,
-          width: 700,
-          openOnLoad: false
-        });
-    </script>
-    <script src='https://cdn.jotfor.ms/s/umd/latest/for-form-embed-handler.js'></script>
-    <script>window.jotformEmbedHandler("iframe[id='241961819712361']", "https://form.jotform.com/")</script>
-      <a class="btn lightbox-241961819712361"
-      style="
-      margin-top: 16px;
-      text-transform: uppercase;
-      font-size: 14px;
-      text-decoration: none;
-      cursor: pointer;
-      display: inline-block;
-      padding: 10px;
-      font-family: inherit;
-      text-shadow: none;
-      user-select: none;
-      transition: all,.1s,ease-in;
-      background-color: #BF0073;
-      border: 1px solid #BF0073;
-      color: #FFFFFF;
-      align-content: center;
-      ">
-        Newsletter Sign-Up
-      </a>
+    
+        <script src ="https://form.jotform.com/static/feedback2.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            var JFL_242037076769363 = new JotformFeedback({
+              formId: '242037076769363',
+              base: 'https://form.jotform.com/',
+              windowTitle: 'Sign Up To My Free Newsletter',
+              backgroundColor: '#FFA500',
+              fontColor: '#FFFFFF',
+              type: 'false',
+              height: 500,
+              width: 700,
+              openOnLoad: false
+            });
+        </script>
+        <script src='https://cdn.jotfor.ms/s/umd/latest/for-form-embed-handler.js'></script>
+        <script>window.jotformEmbedHandler("iframe[id='242037076769363']", "https://form.jotform.com/")</script>
+          <a class="btn lightbox-242037076769363"
+          style="
+          margin-top: 16px;
+          text-transform: uppercase;
+          font-size: 14px;
+          text-decoration: none;
+          cursor: pointer;
+          display: inline-block;
+          padding: 10px;
+          font-family: inherit;
+          text-shadow: none;
+          user-select: none;
+          transition: all,.1s,ease-in;
+          background-color: #BF0073;
+          border: 1px solid #BF0073;
+          color: #FFFFFF;
+          ">
+            Sign Up To My Free Newsletter
+          </a>
     </div>
 
     <div class="col-lg-4 col-md-4"></div>
@@ -1104,7 +1104,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="https://formspree.io/f/xlebpqnj" method="post" role="form" class="contact-form">
+            <form action="https://formspree.io/f/xblrdoyd" method="post" role="form" class="contact-form">
               <div class="row">
                 <div class="col form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
