--- a/index.html
+++ b/index.html
@@ -1082,23 +1082,24 @@
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Dublin | Ireland </p>
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p><a href = "mailto: rachael.smith.coaching@gmail.com">rachael.smith.coaching@gmail.com</a><br></p>
                 </div>
               </div>
-              <div class="col-md-6">
+              <!--<div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
                   <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
                 </div>
-              </div>
+              </div>-->
+
             </div>
 
           </div>
@@ -1145,11 +1146,8 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Embrace Life Coaching<span>.</span></h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Dublin | Ireland <br><br>
+              <strong>Email:<br></strong><a href = "mailto: rachael.smith.coaching@gmail.com">rachael.smith.coaching@gmail.com</a>
             </p>
           </div>
 
