Final Version - Client Approved

--- a/index.html
+++ b/index.html
@@ -163,17 +163,19 @@
                   <div class="member-img">
                     <img src="assets/img/team/Rachael_1.jpg" class="img-fluid" alt="">
                     <div class="social">
-                      <a href=""><i class="bi bi-twitter"></i></a>
+                      <!--<a href=""><i class="bi bi-twitter"></i></a>
                       <a href=""><i class="bi bi-facebook"></i></a>
                       <a href=""><i class="bi bi-instagram"></i></a>
-                      <a href=""><i class="bi bi-linkedin"></i></a>
+                      <a href=""><i class="bi bi-linkedin"></i></a>-->
                     </div>
                   </div>
                   <div class="member-info">
                     <h4>Rachael Smith</h4>
                     <span>Associate Certified Coach (ACC)</span>
                     <span>Certified Parent Coach</span><br>
-                    <div class="col-lg-12 col-md-12 d-flex align-items-stretch"><img id="acc" src="assets/img/ACC_ICF_icon.png" alt=""></div>
+                    <!--<div class="col-lg-12 col-md-12 d-flex align-items-stretch"><img id="acc_ifc" src="assets/img/ACC_ICF_icon.png" alt=""></div>-->
+                    <div class="col-lg-12 col-md-12 d-flex align-items-stretch"><img id="acc" src="assets/img/ACC_icon.png" alt=""></div>
+                    <div class="col-lg-12 col-md-12 d-flex align-items-stretch"><img id="ifc" src="assets/img/ICF_icon.png" alt=""></div>
                   </div>
                 </div>
               </div>
@@ -410,7 +412,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <i class="bi bi-briefcase"></i>
               <h4><a href="#">1 - Empowerment: </a></h4>
-              <p>We believe in letting go of excuses, fostering unshakeable confidence, and encouraging you to take ownership of your life without apology. It's time to embrace your uniqueness and unleash your true potential.</p>
+              <p>Letting go of excuses, fostering unshakeable confidence, and encouraging you to take ownership of your life without apology. It's time to embrace your uniqueness and unleash your true potential.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
@@ -424,21 +426,21 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-bar-chart"></i>
               <h4><a href="#">3  - Skills Development: </a></h4>
-              <p>From effective planning to boosting productivity, cultivating persistence, and nurturing a positive outlook, we'll equip you with the essential skills needed to thrive in both your personal and professional life.</p>
+              <p>From effective planning to boosting productivity, cultivating persistence, and nurturing a positive outlook, you will unlock the essential skills needed to thrive in both your personal and professional life.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-binoculars"></i>
               <h4><a href="#">4 - Goal Setting & Accountability: </a></h4>
-              <p>Set ambitious yet achievable goals, stay focused, motivated, and take consistent action towards your aspirations. With our support, you'll turn your dreams into tangible realities, one step at a time.</p>
+              <p>Set ambitious yet achievable goals, stay focused, motivated, and take consistent action towards your aspirations. Through coaching, you'll turn your dreams into tangible realities, one step at a time.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
               <i class="bi bi-brightness-high"></i>
               <h4><a href="#">5 - Transformation & Growth: </a></h4>
-              <p>Our ultimate goal is to facilitate your transformation and facilitate your journey towards lasting growth and fulfilment. Together, we'll embark on a transformative journey that will empower you to become the best version of yourself.</p>
+              <p>The ultimate goal is to facilitate your transformation and facilitate your journey towards lasting growth and fulfilment. Together, we'll embark on a transformative journey that will empower you to become the best version of yourself.</p>
             </div>
           </div>
           <div class="content">
@@ -471,7 +473,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
                   <h4>1 - Building Resilience:</h4>
-                  <p>Participants learn strategies to bounce back from challenges and setbacks, fostering resilience in personal and professional spheres. Workshops help navigate transitions and adapt to change effectively, fostering resilience and growth amidst organisational or personal changes.</p>
+                  <p>Participants learn strategies to deal with challenges and setbacks, fostering resilience in personal and professional spheres. Workshops help navigate transitions and adapt to change effectively, fostering resilience and growth amidst organisational or personal changes.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
@@ -1013,7 +1015,7 @@
             <a data-bs-toggle="collapse" data-bs-target="#faq2" class="collapsed" style="font-weight: bold;">2. Is there a minimum amount of sessions I must sign up for?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                No. That flexibility is great! It allows individuals to tailor their coaching experience to their specific needs and preferences. Some may benefit from ongoing sessions to delve deeper into their goals and challenges, while others may find clarity or resolution after just one session. It's all about empowering clients to take charge of their personal and professional development journey in a way that works best for them.
+                No, coaching is a bespoke process with flexibility aligned to your needs. It allows individuals to tailor their coaching experience to their specific needs and preferences. Some may benefit from ongoing sessions to delve deeper into their goals and challenges, while others may find clarity or resolution after just one session. It's all about empowering clients to take charge of their personal and professional development journey in a way that works best for them.
               </p>
             </div>
           </li>
@@ -1022,8 +1024,8 @@
             <a data-bs-toggle="collapse" data-bs-target="#faq3" class="collapsed" style="font-weight: bold;">3. Is there anything I need to do before our session?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                We can have a complementary connection call beforehand to ensure alignment and clarity between coach and client. It allows for setting expectations, discussing logistics, and addressing any initial questions or concerns. I willI provide you with my Coaching Agreement which must be reviewed and signed by you before Coaching begins. This helps to establish a clear understanding of the coaching relationship and its parameters.<br><br>
-                I would ask clients to consider what they want to bring to the session beforehand to foster readiness and intentionality. This preparation can include reflecting on specific goals, challenges, or areas of focus they wish to explore during the session. However, it's reassuring to know that even if clients are unsure, there's an opportunity at the start of the session to clarify and prioritise their objectives together.<br><br>
+                We can have a complementary connection call beforehand to ensure alignment and clarity between coach and client. It allows for setting expectations, discussing logistics, and addressing any initial questions or concerns. I will provide you with my Coaching Agreement which must be reviewed and signed by you before Coaching begins. This helps to establish a clear understanding of the coaching relationship and its parameters.<br><br>
+                I ask clients to consider what they want to bring to the session beforehand to foster readiness and intentionality. This preparation can include reflecting on specific goals, challenges, or areas of focus they wish to explore during the session. However, it's reassuring to know that even if clients are unsure, there's an opportunity at the start of the session to clarify and prioritise their objectives together.<br><br>
                 Overall, this proactive approach ensures a smooth and productive coaching experience, where clients feel prepared and supported from the outset.
               </p>
             </div>
